--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -4,6 +4,8 @@
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --area-door-height: 310px;
+  --area-door-width: 200px;
 }
 
 * {
